cmake_minimum_required (VERSION 3.1)

project( quadfall )

set( QUADFALL_BINARY_DIR ${PROJECT_SOURCE_DIR}/game )

if( MSVC )
  set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${QUADFALL_BINARY_DIR} )
  set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${QUADFALL_BINARY_DIR} )
  set( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${QUADFALL_BINARY_DIR} )

  foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
    string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
    set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${QUADFALL_BINARY_DIR} )
    set( CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${QUADFALL_BINARY_DIR} )
    set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${QUADFALL_BINARY_DIR} )
  endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )

  SET(CMAKE_CXX_FLAGS "/EHsc")

endif( MSVC )

add_subdirectory( src )
